説明文ちょっと更新

--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <app>
 
     <h3>日本円で見れちゃうやつ</h3>
-    <p>左のリストから保有している通貨を選んで、右の表に保有枚数を入れます<br>
+    <p>左のリストから保有している通貨を選んで、右の表の「Balance」に保有枚数を入れます<br>
     PoloniexとBittrexのみ対応です！</p>
 
     <div class="sidebar">
