売値、買値の項目名を反対にし、ユーザ視点に変更

--- a/app.html
+++ b/app.html
@@ -18,8 +18,8 @@
                 <tr>
                     <th>取引所</th>
                     <th>通貨</th>
-                    <th>買値</th>
-                    <th>売値</th>
+                    <th>売値(Bid)</th>
+                    <th>買値(Ask)</th>
                     <th>上昇率(24h)</th>
                     <th>保有枚数</th>
                     <th>小計</th>
